--- a/src/components/Catalog/_Catalog.scss
+++ b/src/components/Catalog/_Catalog.scss
@@ -1,4 +1,4 @@
-.sidebar {
+.sidebar__left {
 	display: none;
 }
 
